# docs/swagger.json
@@ -53,7 +53,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pkg.FindMyCarResponsev3"
+                            "$ref": "#/definitions/pkg.FindMyCarResponse"
                         }
                     }
                 }
@@ -995,64 +995,6 @@
                 }
             }
         },
-        "/fyc/v1": {
-            "get": {
-                "description": "Get car information based on LPN, language, and fuzzy logic",
-                "tags": [
-                    "Test_Version1"
-                ],
-                "summary": "Get car information",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "License Plate Number",
-                        "name": "LPN",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Language (EN, AR, etc.)",
-                        "name": "L",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Fuzzy logic setting (On/Off)",
-                        "name": "FuzzyLogic",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/fyc/v1/Auth/token": {
             "post": {
                 "description": "Generates a JWT token using client ID and client secret.",
@@ -1510,7 +1452,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pkg.PictureResponsev3"
+                            "$ref": "#/definitions/pkg.PictureResponse"
                         }
                     }
                 }
@@ -1556,7 +1498,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pkg.TokenResponseTestv3"
+                            "$ref": "#/definitions/pkg.TokenResponseTest"
                         }
                     }
                 }
@@ -1564,14 +1506,6 @@
         }
     },
     "definitions": {
-        "config.CustomDate": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
-                    "type": "string"
-                }
-            }
-        },
         "pkg.ApiManage": {
             "type": "object",
             "required": [
@@ -1696,20 +1630,6 @@
                 }
             }
         },
-        "pkg.CarLocationv3": {
-            "type": "object",
-            "properties": {
-                "facility": {
-                    "type": "string"
-                },
-                "picture_name": {
-                    "type": "string"
-                },
-                "spot_id": {
-                    "type": "string"
-                }
-            }
-        },
         "pkg.Carpark": {
             "type": "object",
             "required": [
@@ -1749,20 +1669,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/pkg.CarLocation"
-                    }
-                },
-                "response_code": {
-                    "type": "integer"
-                }
-            }
-        },
-        "pkg.FindMyCarResponsev3": {
-            "type": "object",
-            "properties": {
-                "locations": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pkg.CarLocationv3"
                     }
                 },
                 "response_code": {
@@ -1815,14 +1721,6 @@
                 }
             }
         },
-        "pkg.PictureResponsev3": {
-            "type": "object",
-            "properties": {
-                "image_data": {
-                    "type": "string"
-                }
-            }
-        },
         "pkg.PresentCar": {
             "type": "object",
             "required": [
@@ -1866,7 +1764,7 @@
                     "type": "string"
                 },
                 "transactionDate": {
-                    "$ref": "#/definitions/config.CustomDate"
+                    "type": "string"
                 }
             }
         },
@@ -1894,20 +1792,6 @@
             }
         },
         "pkg.TokenResponseTest": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "expires_in": {
-                    "type": "integer"
-                },
-                "token_type": {
-                    "type": "string"
-                }
-            }
-        },
-        "pkg.TokenResponseTestv3": {
             "type": "object",
             "properties": {
                 "access_token": {
