# pkg/routes.go
@@ -14,67 +14,57 @@ func SetupRouter(db *bun.DB) *gin.Engine {
 	r := gin.Default()
 	r.Use(config.CustomErrorHandler())
 
-	carParkAPI := NewCarparkAPI(db)
-	presentCarAPI := NewPresentCarAPI(db)
-	zoneAPI := NewZoneAPI(db)
-	zoneImageAPI := NewZoneImageAPI(db)
-	CameraAPI := NewCameraAPI(db)
-	CarDetailAPI := NewCarDetailAPI(db)
-	ClientCredAPI := NewClientCredAPI(db)
-
 	fmt.Println("----------------------------  -+-+-+-+-  -----------------------------------")
 
 	// Carpark routes
-	r.GET("/fyc/carparks", carParkAPI.GetAllCarparks)
-	r.GET("/fyc/carparks/:id", carParkAPI.GetCarparkByID)
-	r.POST("/fyc/carparks", carParkAPI.AddCarpark)
-	r.PUT("/fyc/carparks/:id", carParkAPI.UpdateCarpark)
-	r.DELETE("/fyc/carparks/:id", carParkAPI.DeleteCarpark)
+	r.GET("/fyc/carparks", func(c *gin.Context) { GetAllCarparksAPI(c, db) })
+	r.GET("/fyc/carparks/:id", func(c *gin.Context) { GetCarparkByIDAPI(c, db) })
+	r.POST("/fyc/carparks", func(c *gin.Context) { AddCarparkAPI(c, db) })
+	r.PUT("/fyc/carparks/:id", func(c *gin.Context) { UpdateCarparkAPI(c, db) })
+	r.DELETE("/fyc/carparks/:id", func(c *gin.Context) { DeleteCarparkAPI(c, db) })
 
 	// PresentCar routes
-	r.GET("/fyc/presentcars", presentCarAPI.GetPresentCars)
-	r.GET("/fyc/presentcars/:lpn", presentCarAPI.GetPresentCarByLPN)
-	r.POST("/fyc/presentcars", presentCarAPI.CreatePresentCar)
-	r.PUT("/fyc/presentcars/:id", presentCarAPI.UpdatePresentCarById)
-	r.PUT("/fyc/presentcars", presentCarAPI.UpdatePresentCarBylpn)
-	r.DELETE("/fyc/presentcars/:id", presentCarAPI.DeletePresentCar)
+	r.GET("/fyc/presentcars", func(c *gin.Context) { GetPresentCarsAPI(c, db) })
+	r.GET("/fyc/presentcars/:lpn", func(c *gin.Context) { GetPresentCarByLPNAPI(c, db) })
+	r.POST("/fyc/presentcars", func(c *gin.Context) { CreatePresentCarAPI(c, db) })
+	r.PUT("/fyc/presentcars/:id", func(c *gin.Context) { UpdatePresentCarByIdAPI(c, db) })
+	r.PUT("/fyc/presentcars", func(c *gin.Context) { UpdatePresentCarBylpnAPI(c, db) })
+	r.DELETE("/fyc/presentcars/:id", func(c *gin.Context) { DeletePresentCarAPI(c, db) })
 
 	// Zone routes
-	r.GET("/fyc/zones", zoneAPI.GetZones)
-	r.GET("/fyc/zones/:id", zoneAPI.GetZoneByID)
-	r.POST("/fyc/zones", zoneAPI.CreateZone)
-	r.PUT("/fyc/zones/:id", zoneAPI.UpdateZoneId)
-	r.DELETE("/fyc/zones/:id", zoneAPI.DeleteZone)
+	r.GET("/fyc/zones", func(c *gin.Context) { GetZonesAPI(c, db) })
+	r.GET("/fyc/zones/:id", func(c *gin.Context) { GetZoneByIDAPI(c, db) })
+	r.POST("/fyc/zones", func(c *gin.Context) { CreateZoneAPI(c, db) })
+	r.PUT("/fyc/zones/:id", func(c *gin.Context) { UpdateZoneIdAPI(c, db) })
+	r.DELETE("/fyc/zones/:id", func(c *gin.Context) { DeleteZoneAPI(c, db) })
 
 	// ZoneImage routes
-	r.GET("/fyc/zonesImage", zoneImageAPI.GetImageZones)
-	r.GET("/fyc/zonesImage/:id", zoneImageAPI.GetZoneImageByID)
-	r.POST("/fyc/zonesImage", zoneImageAPI.CreateZoneImage)
-	r.PUT("/fyc/zonesImage/:id", zoneImageAPI.UpdateZoneImageById)
-	r.DELETE("/fyc/zonesImage/:id", zoneImageAPI.DeleteZoneImage)
+	r.GET("/fyc/zonesImage", func(c *gin.Context) { GetImageZonesAPI(c, db) })
+	r.GET("/fyc/zonesImage/:id", func(c *gin.Context) { GetZoneImageByIDAPI(c, db) })
+	r.POST("/fyc/zonesImage", func(c *gin.Context) { CreateZoneImageAPI(c, db) })
+	r.PUT("/fyc/zonesImage/:id", func(c *gin.Context) { UpdateZoneImageByIdAPI(c, db) })
+	r.DELETE("/fyc/zonesImage/:id", func(c *gin.Context) { DeleteZoneImageAPI(c, db) })
 
 	// Camera routes
-	r.GET("/fyc/cameras", CameraAPI.GetCamera)
-	r.GET("/fyc/cameras/:id", CameraAPI.GetCameraByID)
-	r.POST("/fyc/cameras", CameraAPI.CreateCamera)
-	r.PUT("/fyc/cameras/:id", CameraAPI.UpdateCamera)
-	r.DELETE("/fyc/cameras/:id", CameraAPI.DeleteCamera)
+	r.GET("/fyc/cameras", func(c *gin.Context) { GetCameraAPI(c, db) })
+	r.GET("/fyc/cameras/:id", func(c *gin.Context) { GetCameraByIDAPI(c, db) })
+	r.POST("/fyc/cameras", func(c *gin.Context) { CreateCameraAPI(c, db) })
+	r.PUT("/fyc/cameras/:id", func(c *gin.Context) { UpdateCameraAPI(c, db) })
+	r.DELETE("/fyc/cameras/:id", func(c *gin.Context) { DeleteCameraAPI(c, db) })
 
 	// Car detail routes
-	r.GET("/fyc/carDetails", CarDetailAPI.GetCarDetails)
-	r.GET("/fyc/carDetails/:id", CarDetailAPI.GetCarDetailsById)
-	r.POST("/fyc/carDetails", CarDetailAPI.CreateCarDetail)
-	r.PUT("/fyc/carDetails/:id", CarDetailAPI.UpdateCarDetailById)
-	r.DELETE("/fyc/carDetails/:id", CarDetailAPI.DeleteCarDetail)
+	r.GET("/fyc/carDetails", func(c *gin.Context) { GetCarDetailsAPI(c, db) })
+	r.GET("/fyc/carDetails/:id", func(c *gin.Context) { GetCarDetailsByIdAPI(c, db) })
+	r.POST("/fyc/carDetails", func(c *gin.Context) { CreateCarDetailAPI(c, db) })
+	r.PUT("/fyc/carDetails/:id", func(c *gin.Context) { UpdateCarDetailByIdAPI(c, db) })
+	r.DELETE("/fyc/carDetails/:id", func(c *gin.Context) { DeleteCarDetailAPI(c, db) })
 
 	// Client Creds routes
-	r.GET("/fyc/clientCreds", ClientCredAPI.GetAllClientCredsApi)
-	r.GET("/fyc/clientCreds/:id", ClientCredAPI.GetClientCredByID)
-	r.POST("/fyc/clientCreds", ClientCredAPI.AddClientCred)
-	r.PUT("/fyc/clientCreds/:id", ClientCredAPI.UpdateClientCred)
-	r.DELETE("/fyc/clientCreds/:id", ClientCredAPI.DeleteClientCred)
-
-	r.GET("/fyc/v1", presentCarAPI.FYCHandler)
+	r.GET("/fyc/clientCreds", func(c *gin.Context) { GetAllClientCredsApi(c, db) })
+	r.GET("/fyc/clientCreds/:id", func(c *gin.Context) { GetClientCredByIDAPI(c, db) })
+	r.POST("/fyc/clientCreds", func(c *gin.Context) { AddClientCredAPI(c, db) })
+	r.PUT("/fyc/clientCreds/:id", func(c *gin.Context) { UpdateClientCredAPI(c, db) })
+	r.DELETE("/fyc/clientCreds/:id", func(c *gin.Context) { DeleteClientCredAPI(c, db) })
 
 	r.POST("/token", getToken)
 	r.GET("/findmycar", findMyCar)
